--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
             <div class="footer__inner">
                 <div class="footer__credits">
                     <a class="footer__link" href="https://github.com/anastasiazi">
-                        <img class="footer__icon" src="/image/icons/github.svg" alt="git hub">
+                        <img class="footer__icon" src="./image/icons/github.svg" alt="git hub">
                     </a>
                     <a class="footer__link" href="https://t.me/anastasiazi">
-                        <img class="footer__icon" src="/image/icons/telegram.svg" alt="telegram">
+                        <img class="footer__icon" src="./image/icons/telegram.svg" alt="telegram">
                     </a>
                     <a class="footer__link" title="anastasiazi#5249" href="https://discord.com/channels/516715744646660106/780363279066857472">
-                        <img class="footer__icon" src="/image/icons/discord.svg" alt="discord">
+                        <img class="footer__icon" src="./image/icons/discord.svg" alt="discord">
                     </a>
                 </div>
                 
                 <nav class="footer__nav">
                     <a class="footer__link" href="https://rs.school/js/">
-                        <img class="footer__icon-rs" src="/image/icons/rs_school_js.svg" alt="RS School">
+                        <img class="footer__icon-rs" src="./image/icons/rs_school_js.svg" alt="RS School">
                     </a>
                     <a class="footer__link" href="https://youtu.be/O9qR65Juy6U">
-                        <img class="footer__icon" src="/image/icons/youtube.svg" alt="youtube">
+                        <img class="footer__icon" src="./image/icons/youtube.svg" alt="youtube">
                     </a>
                 </nav>
 
