feat: projects added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- bio -->
             <div class="about__inner">
                 <h4 class="about__title">Bio</h4>
-                <p class="about__text">Hello! My name is Anastasiia, and I want to became a front-end developer. I always use my analitical skills and design thinking for solving tasks. Let's make a great project together!</p>
+                <p class="about__text">Hello! My name is Anastasiia, and I am a front-end developer. I always use my analitical skills and design thinking for solving tasks. You could see some of my projects below. Let's make a great project together!</p>
             </div>
 
             <!-- work experience -->
@@ -97,10 +97,23 @@
 
             <!-- projects -->
             <div class="about__inner">
-                <h4 class="about__title">Projects</h4>
-                <span class="project__dis">1.</span>
-                <a class="project__link" href="https://portfolio-zi.netlify.app">Portfolio.app</a><span class="project__dis">| HTML5, CSS3, jQuery</span>
-                <p class="about__text">...others in progress</p>
+                <h4 class="about__title">Projects<span class="about__dis">(all links are clickable)</span></h4>
+                <div class="project__inner">
+                    <span class="project__dis">1.</span>
+                    <a class="project__link" href="https://portfolio-zi.netlify.app" target=”_blank”>Portfolio.app</a><span class="project__dis">| HTML5, CSS3, jQuery</span> 
+                </div>
+                <div class="project__inner">
+                    <span class="project__dis">2.</span>
+                    <a class="project__link" href="https://rolling-scopes-school.github.io/anastasiazi-JSFE2021Q1/virtual-piano/" target=”_blank”>Virtual piano.app</a><span class="project__dis">| HTML5, CSS3, JavaScript</span> 
+                </div>
+                <div class="project__inner">
+                    <span class="project__dis">3.</span>
+                    <a class="project__link" href="https://rolling-scopes-school.github.io/anastasiazi-JSFE2021Q1/photo-filter/" target=”_blank”>Photo filter.app</a><span class="project__dis">| HTML5, CSS3, JavaScript</span> 
+                </div>
+                <div class="project__inner">
+                    <span class="project__dis">4.</span>
+                    <a class="project__link" href="https://rolling-scopes-school.github.io/anastasiazi-JSFE2021Q1/wildlife/" target=”_blank”>First website</a><span class="project__dis">| HTML5, CSS3</span> 
+                </div>
             </div>
             <!-- /projects -->
 
@@ -124,10 +137,10 @@
             <!-- /education -->
 
             <!-- english -->
-            <div class="about__inner">
+            <!-- <div class="about__inner">
                 <h4 class="about__title">English</h4>
                 <p class="about__text">English level B2</p>
-            </div>
+            </div> -->
             <!-- /projects -->
 
         </main> <!-- /.about -->        
@@ -142,19 +155,7 @@
                     <a class="footer__link" href="https://t.me/anastasiazi">
                         <img class="footer__icon" src="./image/icons/telegram.svg" alt="telegram">
                     </a>
-                    <a class="footer__link" title="anastasiazi#5249" href="https://discord.com/channels/516715744646660106/780363279066857472">
-                        <img class="footer__icon" src="./image/icons/discord.svg" alt="discord">
-                    </a>
                 </div>
-                
-                <nav class="footer__nav">
-                    <a class="footer__link" href="https://rs.school/js/">
-                        <img class="footer__icon-rs" src="./image/icons/rs_school_js.svg" alt="RS School">
-                    </a>
-                    <a class="footer__link" href="https://youtu.be/O9qR65Juy6U">
-                        <img class="footer__icon" src="./image/icons/youtube.svg" alt="youtube">
-                    </a>
-                </nav>
 
                 <div class="footer__date">
                     created in  march 2021
